; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_ph_handle_menu_resize.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_ph_handle_menu_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32*, i32*, i8*, i8*, i64 }
%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i8* }
%struct.TYPE_11__ = type { i8*, i64 }

@gui = common dso_local global %struct.TYPE_12__ zeroinitializer, align 8
@Pt_ARG_POS = common dso_local global i32 0, align 4
@Pt_CONTINUE = common dso_local global i32 0, align 4
@pg_margin_bottom = common dso_local global i32 0, align 4
@pg_margin_left = common dso_local global i32 0, align 4
@pg_margin_right = common dso_local global i32 0, align 4
@pg_margin_top = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.TYPE_10__*)* @gui_ph_handle_menu_resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gui_ph_handle_menu_resize(i32* %0, i8* %1, %struct.TYPE_10__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_11__, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.TYPE_10__* %2, %struct.TYPE_10__** %6, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  store %struct.TYPE_9__* %13, %struct.TYPE_9__** %7, align 8
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  store i8* %17, i8** %10, align 8
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @gui, i32 0, i32 4), align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = load i8*, i8** %10, align 8
  store i8* %21, i8** getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @gui, i32 0, i32 3), align 8
  store i8* null, i8** getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @gui, i32 0, i32 2), align 8
  br label %22

22:                                               ; preds = %20, %3
  %23 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  store i8* %24, i8** %25, align 8
  %26 = load i32*, i32** getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @gui, i32 0, i32 0), align 8
  store i32* %26, i32** %8, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* @Pt_ARG_POS, align 4
  %29 = call i32 @PtSetResource(i32* %27, i32 %28, %struct.TYPE_11__* %9, i32 0)
  %30 = call i32 (...) @gui_ph_resize_container()
  %31 = load i32, i32* @Pt_CONTINUE, align 4
  ret i32 %31
}

declare dso_local i32 @PtSetResource(i32*, i32, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @gui_ph_resize_container(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
